--- a/pages/Store.html
+++ b/pages/Store.html
@@ -1,71 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>STORE</title>
-    <!-- Bootstrap & Google font links  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css" />
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> -->
-    <link rel="icon" type="image/x-icon" href="../img/logo.png" />
-    <link rel="stylesheet" href="../flex/style.css" />
-  </head>
-  <body style="background-color: rgb(77, 68, 68)">
-    <nav class="navbar navbar-expand-lg">
-      <div class="container">
-        <a class="navbar-brands" href="#">
-          <img src="../img/logo.png" alt="logo" />
-          A.D MOTORS</a
-        >
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav m-auto my-2 my-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="../index.html"
-                >HOME</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../pages/Trending.html">TRENDING</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="../pages/Store.html">STORE</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../pages/ContactUs.html">CONTACT US</a>
-            </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input
-              class="px-2 search"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn0" type="submit">Search</button>
-          </form>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>STORE</title>
+  <!-- Bootstrap & Google font links  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Rakkas&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css" />
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> -->
+  <link rel="icon" type="image/x-icon" href="../img/logo.png" />
+  <link rel="stylesheet" href="../flex/style.css" />
+</head>
+
+<body style="background-color: rgb(77, 68, 68)">
+  <nav class="navbar navbar-expand-lg">
+    <div class="container">
+      <a class="navbar-brands" href="../index.html">
+        <img src="../img/logo.png" alt="logo" />
+        A.D MOTORS</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav m-auto my-2 my-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="../index.html">HOME</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/Trending.html">TRENDING</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="../pages/Store.html">STORE</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/ContactUs.html">CONTACT US</a>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="px-2 search" type="search" placeholder="Search" aria-label="Search" />
+          <button class="btn0" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Products available on the store -->
+  <section class="store">
+    <div class="container py-5">
+      <div class="row py-5">
+        <div class="col-lg-5 m-auto text-center">
+          <h4>
+            <span>Genuine Market </span><br>
+            <span>Store!!!</span>
+          </h4>
+          <br>
+        </div>
+        <div class="row gy-4">
+          <div class="col-lg-3 text-center">
+            <div class="card">
+              <div class="card-body">
+                <img src="../img/store/01.jpg" class="img-fluid" />
+                <p size="3" align="center">Cylinder Piston Rings Pin</p>
+                <p>Rs. 6000</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 text-center">
+            <div class="card">
+              <div class="card-body ">
+
+
+                <img src="../img/store/02.jpg" class="img-fluid" />
+                <p size="3" align="center">Bike Crank Parts</p>
+                <p>Rs. 1000</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 text-center">
+            <div class="card">
+              <div class="card-body">
+                <img src="../img/store/03.jpg" class="img-fluid" />
+                <p size="3" align="center">Steel Bike Hub Pair</p>
+                <p>Rs. 6000</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 text-center">
+            <div class="card">
+              <div class="card-body">
+                <img src="../img/store/04.jpg" class="img-fluid" />
+                <p size="3" align="center">Steel Foot Rest</p>
+                <p>Rs. 3000</p>
+              </div>
+            </div>
+          </div>
+          <!-- 2nd row spare parts -->
+          <div class="col-lg-3 text-center">
+            <div class="card">
+              <div class="card-body">
+                <img src="../img/store/05.jpg" class="img-fluid" />
+                <p size="3" align="center">Genuine yahama parts</p>
+                <p>Rs. 1500</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 text-center">
+            <div class="card">
+              <div class="card-body">
+                <img src="../img/store/06.jpg" class="img-fluid" />
+                <p size="3" align="center">Bike Fuel Filter</p>
+                <p>Rs. 2000</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 text-center">
+            <div class="card">
+              <div class="card-body">
+                <img src="../img/store/07.jpg" class="img-fluid" />
+                <p size="3" align="center">Bldc Hub Motor 250W 36V</p>
+                <p>Rs. 8000 - 10000</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 text-center">
+            <div class="card">
+              <div class="card-body">
+                <img src="../img/store/08.jpg" class="img-fluid" />
+                <p size="3" align="center">Bajaj Pulsar spare parts</p>
+                <p>Contact: 98000000</p>
+              </div>
+            </div>
+          </div>
+          <!-- 3rd row spare parts -->
+          <div class="col-lg-3 text-center">
+            <div class="card">
+              <div class="card-body">
+                <img src="../img/store/09.jpg" class="img-fluid" />
+                <p size="3" align="center">Cylinder Piston Rings Pin</p>
+                <p>Contact: 90000000</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 text-center">
+            <div class="card">
+              <div class="card-body">
+                <img src="../img/store/10.jpg" class="img-fluid" />
+                <p size="3" align="center">Nanya Hub Motor</p>
+                <p>Rs. 7000</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 text-center">
+            <div class="card">
+              <div class="card-body">
+                <img src="../img/store/11.jpg" class="img-fluid" />
+                <p size="3" align="center">Digital Rectangular Speedometer</p>
+                <p>Rs. 500</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 text-center">
+            <div class="card">
+              <div class="card-body">
+                <img src="../img/store/12.jpg" class="img-fluid" />
+                <p size="3" align="center">Front Airmatic Suspension</p>
+                <p>Rs. 10000</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </nav>
+  </section>
+  <div class="text-center"> <button class="btn1" type="submit">See more</button>
+  </div>
+  <footer>
+    <p style="font-size: 22px; text-align: center">About us</p>
+    <p style="font-size: 17px">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem ea
+      eveniet earum corporis itaque magnam maxime doloribus, amet reiciendis
+      ipsa, velit cumque aliquid dolor, ducimus culpa doloremque deserunt
+      assumenda nulla? <br><br>
+      <b>Connect with us: info@ADmotors121.com</b>
+    </p>
+    <br />
+    <img src="../img/logo.png" alt="logo" class="footerico" />
+    <b> A.D Motors </b></a> <br>
+    <i class="fa-brands fa-youtube"></i>
+    <i class="fa-brands fa-tiktok"></i>
+    <i class="fa-brands fa-facebook"></i>
+    <i class="fa-brands fa-instagram"></i>
+    <br><br>
+    <i class="fa-regular fa-copyright"> <span style="font-size: 17px;">2022 - A.D Motors </span></i>
 
-    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  </body>
+  </footer>
+  <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+</body>
+
 </html>
