--- a/pages/Trending.html
+++ b/pages/Trending.html
@@ -1,172 +1,231 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trending</title>
-    <!-- Bootstrap & Google font links  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css" />
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> -->
-    <link rel="icon" type="image/x-icon" href="../img/logo.png" />
-    <link rel="stylesheet" href="../flex/style.css" />
-  </head>
-  <body style="background-color: rgb(77, 68, 68)">
-    <nav class="navbar navbar-expand-lg">
-      <div class="container">
-        <a class="navbar-brands" href="../index.html">
-          <img src="../img/logo.png" alt="logo" />
-          A.D MOTORS</a
-        >
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav m-auto my-2 my-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="../index.html"
-                >HOME</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="../pages/Trending.html"
-                >TRENDING</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../pages/Store.html">STORE</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../pages/ContactUs.html">CONTACT US</a>
-            </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input
-              class="px-2 search"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn0" type="submit">Search</button>
-          </form>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TENDING</title>
+  <!-- Bootstrap & Google font links  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+
+  <link href="https://fonts.googleapis.com/css2?family=Rakkas&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css" />
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> -->
+  <link rel="icon" type="image/x-icon" href="../img/logo.png" />
+  <link rel="stylesheet" href="../flex/style.css" />
+</head>
+
+<body style="background-color: rgb(77, 68, 68)">
+  <nav class="navbar navbar-expand-lg">
+    <div class="container">
+      <a class="navbar-brands" href="../index.html">
+        <img src="../img/logo.png" alt="logo" />
+        A.D MOTORS</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav m-auto my-2 my-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="../index.html">HOME</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="../pages/Trending.html">TRENDING</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/Store.html">STORE</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/ContactUs.html">CONTACT US</a>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="px-2 search" type="search" placeholder="Search" aria-label="Search" />
+          <button class="btn0" type="submit">Search</button>
+        </form>
       </div>
-    </nav>
-    <!-- ***************************************************************************** -->
+    </div>
+  </nav>
+  <!-- ***************************************************************************** -->
 
-    <!-- Trending Bikes available -->
+  <!-- Trending Bikes available -->
 
-    <section class="product">
-      <div class="container py-5">
-        <div class="row py-5">
-          <div class="col-lg-5 m-auto text-center">
-            <h2 style="color: rgb(233, 205, 205); font-family: sans-erif">
-              <u> The best motorbikes available on the market!! </u>
-            </h2>
-            <br />
-          </div>
-          <div class="row gy-4">
-            <div class="col-lg-3 text-center">
-              <div class="card">
-                <div class="card-body">
-                  <!-- https://www.zigwheels.com/newbikes/Kawasaki/ninja-h2#leadform -->
-                  <img src="../img/products/01.jpg" class="img-fluid" />
-                  <font size="3" align="center">Kawasaki Ninja H2</font>
-                  <p>Rs. 90 lakhs - 1 crore</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 text-center">
-              <div class="card">
-                <div class="card-body">
-                  <!-- https://www.zigwheels.com/royal-enfield-bikes/classic-350 -->
-                  <img src="../img/products/02.jpg" class="img-fluid" />
-                  <font size="3" align="center">Royal Enfield Classic 350</font>
-                  <p>Rs. 7.75 lakhs - 8 lakhs</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 text-center">
-              <div class="card">
-                <div class="card-body">
-                  <!-- https://www.zigwheels.com/newbikes/Yamaha/mt-15/specifications -->
-                  <img src="../img/products/03.jpg" class="img-fluid" />
-                  <font size="3" align="center">Yamaha MT-15 Version-2.0</font>
-                  <p>Rs. 2.75 lakhs - 3 lakhs</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 text-center">
-              <div class="card">
-                <div class="card-body">
-                  <!-- https://www.zigwheels.com/newbikes/Kawasaki/Ninja-ZX-10R  -->
-                  <img src="../img/products/04.jpg" class="img-fluid" />
-                  <font size="3" align="center">Kawasaki Ninja ZX-10R</font>
-                  <p>Rs. 20.75 lakhs - 30 lakhs</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 text-center">
-              <div class="card">
-                <div class="card-body">
-                  <!-- https://www.zigwheels.com/newbikes/Ducati/streetfighter-v2 -->
-                  <img src="../img/products/05.jpg" class="img-fluid" />
-                  <font size="3" align="center">Ducati Streetfighter V2</font>
-                  <p>Rs. 74.75 lakhs - 83 lakhs</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 text-center">
-              <div class="card">
-                <div class="card-body">
-                  <!-- https://www.zigwheels.com/newbikes/KTM/Duke-390 -->
-                  <img src="../img/products/06.jpg" class="img-fluid" />
-                  <font size="3" align="center">KTM 390 Duke</font>
-                  <p>Rs. 10 lakhs - 12 lakhs</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 text-center">
-              <div class="card">
-                <div class="card-body">
-                  <!-- https://www.zigwheels.com/newbikes/TVS/akula-310 -->
-                  <img src="../img/products/07.jpg" class="img-fluid" />
-                  <font size="3" align="center">TVS Apache RR 310</font>
-                  <p>Rs. 8 lakhs - 10 lakhs</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 text-center">
-              <div class="card">
-                <div class="card-body">
-                  <!-- https://www.zigwheels.com/newbikes/Yamaha/mt-15/specifications -->
-                  <img src="../img/products/08.jpg" class="img-fluid" />
-                  <font size="3" align="center"
-                    >Royal Enfield Continental GT 650</font
-                  >
-                  <p>Rs. 15.75 lakhs - 20 lakhs</p>
-                </div>
+  <section class="trending">
+    <div class="container py-5">
+      <div class="row py-5">
+        <div class="col-lg-5 m-auto text-center">
+          <h4>
+            <span> The Best Motorbikes </span><br />
+            <span> Available on the Market!!</span>
+          </h4>
+          <br />
+        </div>
+        <div class="row gy-4">
+          <div class="col-lg-3 text-center">
+            <div class="card">
+              <div class="card-body">
+                <!-- https://www.zigwheels.com/newbikes/Kawasaki/ninja-h2#leadform -->
+                <img src="../img/products/01.jpg" class="img-fluid" />
+                <a href="#"></a>
+                <p size="3" align="center">Kawasaki Ninja H2</p>
+                <p>Rs. 90 lakhs - 1 crore</p>
               </div>
             </div>
           </div>
+          <div class="col-lg-3 text-center">
+            <div class="card">
+              <div class="card-body">
+                <!-- https://www.zigwheels.com/royal-enfield-bikes/classic-350 -->
+                <img src="../img/products/02.jpg" class="img-fluid" />
+                <p size="3" align="center">Royal Enfield Classic 350</p>
+                <p>Rs. 7.75 lakhs - 8 lakhs</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 text-center">
+            <div class="card">
+              <div class="card-body">
+                <!-- https://www.zigwheels.com/newbikes/Yamaha/mt-15/specifications -->
+                <img src="../img/products/03.jpg" class="img-fluid" />
+                <p size="3" align="center">Yamaha MT-15 Version-2.0</p>
+                <p>Rs. 2.75 lakhs - 3 lakhs</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 text-center">
+            <div class="card">
+              <div class="card-body">
+                <!-- https://www.zigwheels.com/newbikes/Kawasaki/Ninja-ZX-10R  -->
+                <img src="../img/products/04.jpg" class="img-fluid" />
+                <p size="3" align="center">Kawasaki Ninja ZX-10R</p>
+                <p>Rs. 20.75 lakhs - 30 lakhs</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 text-center">
+            <div class="card">
+              <div class="card-body">
+                <!-- https://www.zigwheels.com/newbikes/Ducati/streetfighter-v2 -->
+                <img src="../img/products/05.jpg" class="img-fluid" />
+                <p size="3" align="center">Ducati Streetfighter V2</p>
+                <p>Rs. 74.75 lakhs - 83 lakhs</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 text-center">
+            <div class="card">
+              <div class="card-body">
+                <!-- https://www.zigwheels.com/newbikes/KTM/Duke-390 -->
+                <img src="../img/products/06.jpg" class="img-fluid" />
+                <p size="3" align="center">KTM 390 Duke</p>
+                <p>Rs. 10 lakhs - 12 lakhs</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 text-center">
+            <div class="card">
+              <div class="card-body">
+                <!-- https://www.zigwheels.com/newbikes/TVS/akula-310 -->
+                <img src="../img/products/07.jpg" class="img-fluid" />
+                <p size="3" align="center">TVS Apache RR 310</p>
+                <p>Rs. 8 lakhs - 10 lakhs</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 text-center">
+            <div class="card">
+              <div class="card-body">
+                <!-- https://www.zigwheels.com/newbikes/Yamaha/mt-15/specifications -->
+                <img src="../img/products/08.jpg" class="img-fluid" />
+                <p size="3" align="center">
+                  Royal Enfield Continental GT 650
+                </p>
+                <p>Rs. 15.75 lakhs - 20 lakhs</p>
+              </div>
+            </div>
+          </div>
+          <!-- third row -->
+          <div class="col-lg-3 text-center">
+            <div class="card">
+              <div class="card-body">
+                <!-- https://honda.com.np/motorcycle/hornet-2-0/ -->
+                <img src="../img/products/09.jpg" class="img-fluid" />
+                <p size="3" align="center">Hornet 2.0</p>
+                <p>Rs. 5.75 lakhs - 8 lakhs</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 text-center">
+            <div class="card">
+              <div class="card-body">
+                <!-- https://www.zigwheels.com/newbikes/Yamaha/mt-15/specifications -->
+                <img src="../img/products/10.jpg" class="img-fluid" />
+                <p size="3" align="center">Honda Xblade</p>
+                <p>Rs. 5 lakhs - 6 lakhs</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 text-center">
+            <div class="card">
+              <div class="card-body">
+                <!-- https://www.daraz.com.np/products/tvs-apache-rtr-200-abs-fi-i119549959-s1032720508.html?spm=a2a0e.searchlistcategory.list.15.71b01978sfDTdG&search=1    -->
+                <img src="../img/products/11.jpg" class="img-fluid" />
+                <p size="3" align="center">TVS APACHE RTR 200 ABS FI</p>
+                <p>Rs. 4 lakhs - 5 lakhs</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 text-center">
+            <div class="card">
+              <div class="card-body">
+                <!-- https://www.zigwheels.com/newbikes/Yamaha/mt-15/specifications -->
+                <img src="../img/products/12.jpg" class="img-fluid" />
+                <p size="3" align="center">Honda CB Hornet 160R</p>
+                <p>Rs. 3 lakhs - 4 lakhs</p>
+              </div>
+            </div>
+          </div>
         </div>
+        <i class="fa-regular fa-arrow-down-to-line"></i>
+
       </div>
-    </section>
-    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  </body>
+    </div>
+  </section>
+  <div class="text-center"> <button class="btn1" type="submit">See more</button>
+  </div>
+
+
+  <!-- Footer of the page -->
+  <footer>
+    <p style="font-size: 22px; text-align: center">About us</p>
+    <p style="font-size: 17px">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem ea
+      eveniet earum corporis itaque magnam maxime doloribus, amet reiciendis
+      ipsa, velit cumque aliquid dolor, ducimus culpa doloremque deserunt
+      assumenda nulla? <br><br>
+      <b>Connect with us: info@ADmotors121.com</b>
+    </p>
+    <br />
+    <img src="../img/logo.png" alt="logo" class="footerico" />
+    <b> A.D Motors </b></a> <br>
+    <i class="fa-brands fa-youtube"></i>
+    <i class="fa-brands fa-tiktok"></i>
+    <i class="fa-brands fa-facebook"></i>
+    <i class="fa-brands fa-instagram"></i>
+
+    <i class="fa-regular fa-arrow-down-to-line"></i>
+    <br><br>
+    <i class="fa-regular fa-copyright"> <span style="font-size: 17px;">2022 - A.D Motors </span></i>
+
+  </footer>
+
+  <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+</body>
+
 </html>
